[package]
name = "odindevs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.14.0"
arc-swap = "1.9.2"
postcard = { version = "1.1.3", features = ["alloc"] }
redb = { version = "4.1.0", features = ["uuid"] }
reqwest = { version = "0.13.4", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.4", features = ["macros"] }
uuid = { version = "1.24.0", features = ["serde"] }
